# lab_rab

./: # test_vulnerable.py  .flake8  bandit.yml  db_parser.db  db_parser.py  parser.py  pyproject.toml  sonar-project.properties  sonar-scanner.properties
.github/workflows/: codeql-analysis.yml  sonar.yml
.sonarlint/: connectedMode.json
sonar-scanner-6.2.1.4610-windows-x64/conf/: sonar-scanner.properties
